# Lafiya-contract

./: .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Makefile  PUBLISHING.md  README.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  security_report.md
.github/scripts/: check_readme_contracts.py
.github/workflows/: ci.yml  smoke-test.yml
bindings/attestation-registry/: README.md  package.json
bindings/attestation-registry/src/: index.ts
bindings/attester-registry/: README.md  package.json
bindings/attester-registry/src/: index.ts
config/: README.md  networks.toml
contracts/attestation-registry/src/: lib.rs  test.rs
contracts/attester-registry/: Cargo.toml
contracts/attester-registry/src/: large_test.rs  lib.rs  test.rs
contracts/multisig-account/: Cargo.toml
contracts/multisig-account/src/: integration_test.rs  lib.rs  test.rs
crates/lafiya-cli/: Cargo.toml
crates/lafiya-cli/src/: main.rs
crates/lafiya-config/: Cargo.toml
crates/lafiya-config/src/: lib.rs
docs/: error-codes.md  releasing.md  storage-cost.md  typescript-bindings.md
docs/adr/: 0006-attestation-revocation-semantics.md
docs/architecture/: event-indexing.md  storage-versioning.md
scripts/: README.md  admin.sh  deploy-testnet.sh  deploy.sh  smoke-test.sh
scripts/lib/: config.sh
